syntax = "proto3";
package com.hitnslab.dnssecurity.pdnsdataloader.api.proto;
option java_package = "com.hitnslab.dnssecurity.pdnsdataloader.api.proto";
option java_outer_classname = "PDnsDataProto";
option optimize_for = SPEED;
option cc_enable_arenas = true;
//import "google/protobuf/wrappers.proto";

message PDnsData {
  int64 query_time = 1;
  string domain = 2;
  int32 query_type = 3;
  int32 reply_code = 4;
  string top_private_domain = 5;
}
